--- a/index.html
+++ b/index.html
@@ -49,38 +49,38 @@
     </header>
     <main>
       <!-- ===== HERO ===== -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button class="order-btn" type="button">Order Service</button>
       </section>
       <!-- ===== Advantages ===== -->
-      <section>
-        <h2>Advantages</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="advantages">
+        <h2 class="advantages-secion-name" id="advantages">Advantages</h2>
+        <ul class="advantages-list">
+          <li class="advantages-list-item">
+            <h3 class="advantages-title">Strategy</h3>
+            <p class="advantages-title-descr">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="advantages-list-item">
+            <h3 class="advantages-title">Punctuality</h3>
+            <p class="advantages-title-descr">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="advantages-list-item">
+            <h3 class="advantages-title">Diligence</h3>
+            <p class="advantages-title-descr">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="advantages-list-item">
+            <h3 class="advantages-title">Technologies</h3>
+            <p class="advantages-title-descr">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -88,122 +88,134 @@
         </ul>
       </section>
       <!-- ===== Our Team ===== -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team-section">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-list-item">
             <img
+              class="team-list-img"
               src="./images/mark-guerrero.jpg"
               alt="Mark Guerrero avatar"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-list-title">Mark Guerrero</h3>
+            <p class="team-list-role">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-list-img"
               src="./images/tom-ford.jpg"
               alt="Tom Ford avatar"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-list-title">Tom Ford</h3>
+            <p class="team-list-role">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-list-img"
               src="./images/camila-garcia.jpg"
               alt="Camila Garcia avatar"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-list-title">Camila Garcia</h3>
+            <p class="team-list-role">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-list-img"
               src="./images/daniel-wilson.jpg"
               alt="Daniel Wilson avatar"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-list-title">Daniel Wilson</h3>
+            <p class="team-list-role">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- ==== Our Portfolio  ==== -->
-      <section>
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
+      <section class="portfolio">
+        <h2 class="portfolio-title" id="portfolio">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-list-item">
             <img
+              class="portfolio-list-img"
               src="./images/our-portfolio/banking-app.jpg"
               alt="Banking App"
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-list-title">Banking App</h3>
+            <p class="portfolio-list-text">App</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img
+              class="portfolio-list-img"
               src="./images/our-portfolio/cashless-payment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-list-title">Cashless Payment</h3>
+            <p class="portfolio-list-text">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img
+              class="portfolio-list-img"
               src="./images/our-portfolio/meditation-app.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-list-title">Meditation App</h3>
+            <p class="portfolio-list-text">App</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img
+              class="portfolio-list-img"
               src="./images/our-portfolio/taxi-service.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-list-title">Taxi Service</h3>
+            <p class="portfolio-list-text">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img
+              class="portfolio-list-img"
               src="./images/our-portfolio/screen-illustr.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-list-title">Screen Illustrations</h3>
+            <p class="portfolio-list-text">Design</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img
+              class="portfolio-list-img"
               src="./images/our-portfolio/online-courses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-list-title">Online Courses</h3>
+            <p class="portfolio-list-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- ===== FOOTER ===== -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="page-footer">
+      <a class="page-logo" href="./index.html"
+        >Web<span class="accent-color-footer">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
